# remembrall

./: .env.example  Cargo.toml  LICENSE  README.md
.sqlx/: query-734ad8ddc23b365a8024d5d10f86bb6ded28113e28b55e177b2930d16d1d7249.json  query-ab179955b9d374ae06321f577c8778021fd49b0af74fd02074c57b9ca050e887.json  query-ce783734ceae374005cc0e8aea13210f4abfd5a562e7603433d2da1b47f745bc.json  query-eccb9f723d45d387d2603a9a996795e1a25e7e602e1b2c798716b86a4d1e9b77.json  query-f458ef478d968439ee31acb73d9aadd62e8aaf006040f04c9bc25fa364753d18.json
src/: config.rs  create.rs  database.rs  lib.rs  list.rs  main.rs  prompt.rs  prompter.rs  save.rs
src/media/: list.rs  mod.rs  model.rs
