[package]
name = "remembrall"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
inquire = { version = "0.6.2", features = ["default", "date", "macros"] }
chrono = "0.4"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "chrono", "time"] }
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
serde = { version = "1.0.152", features = ["derive"] }
confy = "0.6.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
